deployments/k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-db
  template:
    metadata:
      labels:
        app: inventory-db
    spec:
      containers:
      - name: inventory-db
        image: walissoncasonatto/instance-inventory-db:20
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: db-volume
      volumes:
      - name: db-volume
        persistentVolumeClaim:
          claimName: inventory-api-db-disk
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-db-service
spec:
  selector:
    app: inventory-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
